[metadata]
name = django-file-router
version = attr: file_router.__version__
description = File and folder-based routes for Django views
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Ed Rivas
author_email = ed@jerivas.com
url = https://github.com/jerivas/django-file-router
project_urls =
    Documentation = https://github.com/jerivas/django-file-router#readme
    Source = https://github.com/jerivas/django-file-router
    Tracker = https://github.com/jerivas/django-file-router/issues
    Changelog = https://github.com/jerivas/django-file-router/releases
    Download = https://pypi.org/project/django-file-router/#files
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0

[options]
python_requires = >=3.7
packages = file_router
include_package_data = true
install_requires =
    django >= 2.2

[options.extras_require]
testing =
    pytest-django >= 4, <5
    pytest-cov >= 2, < 3
codestyle =
    flake8 >= 3, <4
    black >= 22, <23
    isort >= 5, <6
    pyupgrade >= 2, <3

# Building

[bdist_wheel]
universal = 1
